--- a/package.json
+++ b/package.json
@@ -26,11 +26,17 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/node": "^16.9.2",
+    "@types/papaparse": "^5.2.6",
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
-    "@types/papaparse": "^5.2.6",
-    "eslint": "7.32.0",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.0",
+    "prettier": "^2.4.1",
     "typescript": "^4.4.3"
   }
 }
